# godot-mcp

./: .env.example  .gitignore  .mcpbignore  .windsurfrules  AGENTS.md  ARCHITECTURE.md  BUILD_LOG.md  CHANGELOG.md  CLAUDE.md  Dockerfile  INSTALL.md  README.md  RELEASE_TIER.md  STATUS.md  TODO.md  docker-compose.yml  glama.json  godot-mcp-backend.spec  justfile  llms-full.txt  llms.txt  main_bridge.tscn  manifest.json  opencode.json  project.godot  pyproject.toml  pyproject.toml.bak  run_server.py  start.ps1
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
.opencode/skills/godot-mcp/: SKILL.md
demos/: playtesting.py  profile.py  scene_inspect.py  splat_import.py
docs/: ASSESSMENT_2026-07-01.md  ASSESSMENT_2026-07-11.md  AVATARS_AND_VRM.md  CONFIGURATION.md  FLEET_ASSESSMENT.md  LLM_ONBOARDING_PLAN.md  LLM_ONBOARDING_ROLLOUT.md  MOBILE_API_CONTRACT.md  MOBILE_QUICKSTART.md  PRD.md  SPEC_DETERMINISTIC_PLAYTESTING.md  SPEC_GAME_BUILDER.md  TOOLS.md  VRM_AVATAR_PIPELINE.md  agentic-game-dev.md  ai-and-indie-games.md  ai-flows.md  api.md  architecture.md  cli.md  community.md  comparison.md  examples.md  fleet-game-pipeline.md  game-builder-tutorial.md  godot-ecosystem.md  godot.md  history.md  install.md  little-game-guide.md  mcp-server.md  ship-to-itch.md  ship-to-steam.md
docs/mobile/: APP_POCKET_ARCHITECT.md  APP_SPATIAL_VIBE.md  APP_STATE_SURVEILLER.md  ARCHITECTURE.md  CHANGELOG.md  EXTENDING.md  INDEX.md  PROTOCOL_REFERENCE.md
examples/: mobile_client.py
hooks/: hooks.json
maker/: README.md  blender-bridge-example.md  freecad-bridge-example.md  worldlabs-bridge-example.md
mcpb/: .mcpbignore  README.md  manifest.json  run_server.py
mcpb/assets/prompts/: examples.json  system.md  user.md
mcpb/src/: __init__.py  server.py
native/: Cargo.toml  build-sidecar.ps1  build.ps1  package-lock.json  package.json  tauri.conf.json
native/icons/: icon.icns
native/src/: backend.rs  main.rs
native/windows/: hooks.nsh
samples/: .gitignore  README.md
samples/bundles/: 2d-platformer.mcpb.json  heart-platformer.mcpb.json  open-world-rpg.mcpb.json  procedural-generation.mcpb.json
samples/vibecode-runner/: ClaudeDesktop.gd  ClaudeDesktop.tscn  ContextOverflow.gd  ContextOverflow.tscn  Hallucinator.gd  Hallucinator.tscn  LegacyCode.gd  LegacyCode.tscn  MainScene.tscn  Meeting.gd  PromptInjector.gd  PromptInjector.tscn  README.md  Techbro.gd  Techbro.tscn  TheDatacenter.gd  Tokenmaxxer.gd  Tokenmaxxer.tscn  VC.gd  VC.tscn  VibecoderRunner.gd  main.tscn  project.godot
samples/vibecode-runner/scripts/: boss_butler.gd  enemy_motion.gd  game.gd  game_over.gd  hazard_factory.gd  hud.gd  player.gd  projectile.gd  spawner.gd
samples/vibecoder-runner/: CONCEPT.md
scripts/: cua-nsis-config.json  cua-smoke.py  gb-demo.ps1  gb-preview.ps1  gb-smoke.py  generate-tauri-icon.ps1  install-godot-export-templates.ps1  little-game-export.ps1  mcpb-pack.ps1  patch-platformer-godot44.ps1
shaders/: gaussian_splat.gdshader
src/godot_mcp/: server.py
src/godot_mcp/artifacts/: models.py  routes.py  tools.py
src/godot_mcp/bridge/: mcp_bridge.gd
src/godot_mcp/fleet/: __init__.py  exchange.py  pipeline.py  routes.py  service.py  tools.py  worldlabs.py
src/godot_mcp/game_builder/: __init__.py  dialogue.py  pipeline.py  plan.py  project.py  prompts.py  routes.py  service.py  tools.py  worlds.py
templates/: little-game-export_presets.cfg
templates/game-template/: main.tscn  project.godot
tests/: conftest.py  test_activity_log.py  test_bridge.py  test_bridge_stability.py  test_fleet.py  test_game_builder_routes.py  test_integration.py  test_itch.py  test_plugin_install.py  test_portmanteau_registration.py  test_server.py  test_services.py  test_steam.py  test_tools.py
tests/game_builder/: test_project.py  test_worlds.py
web_sota/: package-lock.json  package.json  start.ps1  tailwind.config.js  vite.config.ts
web_sota/e2e/: smoke.spec.ts
web_sota/src/: App.tsx  index.css  store.ts
webapp/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  start.ps1  tsconfig.json  vite.config.ts
webapp/e2e/: smoke.spec.ts
webapp/src/: App.tsx  index.css  main.tsx  store.ts
(+87 files in other folders)
